--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Conversor</title>
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script>
 		var notas=['Do', 'Do#', 'Re', 'Re#', 'Mi',
@@ -56,7 +57,7 @@
 		</script>
 </head>
 <body>
-	<form action="#" style="border:1px black dotted;padding:10px;width:300px;">
+	<form action="#" style="border:1px black dotted;padding:10px;width:300px;" id="all">
 		"
 		  Octava: "
 		<input id="octava" type="number" min="0" max="10" value="4" required="">
