--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
 	<head>
 		<title>Frecuify</title>
+
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+		
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
+
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<script>
-			var notas=['Do', 'Do#', 'Re', 'Re#', 'Mi',
-			           'Fa', 'Fa#', 'Sol', 'Sol#',
-			           'La', 'La#', 'Si'];
+			var notas=['C', 'C#', 'D', 'D#', 'E',
+			           'F', 'F#', 'G', 'G#',
+			           'A', 'A#', 'B'];
 
 			function imprimeFreq()
 			{
@@ -58,24 +61,23 @@
 			</script>
 	</head>
 	<body>
-		<!-- <h1 id="ti">NOTIFY</h1> -->
-
-		<form action="#" id="all">
-			  Octava: 
+		<div id="logo" style="background-image: url(logo.png);"> </div>
+		
+		<form action="#" id="all" class="lead">
+			  Octave: 
 			<input id="octava" type="number" min="0" max="10" value="4" required="">
 			<br>
-			  Nota:
+			  Note:
 			<input id="nota" type="number" min="1" max="12" value="10" required=""> 
 			 (
-			<span id="nombrenota">Si</span>
+			<span id="nombrenota">B</span>
 			)
 			<div>
-			 	Frecuencia: 
+			 	Frecuency: 
 			 	<span id="freq">31608.531</span>
 			 	Hz 
 				<br>
 			</div>
 		</form>
-
 	</body>
 </html>
