--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		
 		<form action="#" id="all" class="lead">
 			<p>Octave: </p>
-			<input id="octava" type="number" min="0" max="10" value="4" required="" pattern="\d*">
+			<input id="octava" type="number" min="0" max="10" value="4" required="" pattern="[0-9]*" novalidate">
 			<br>
 			<p>Note: </p>
 			<input id="nota" type="number" min="1" max="12" value="10" required=""> 
