--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
+		<meta charset="utf-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Frecuify</title>
+
 
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 		
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
 
-		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-		
+
 		<script>
 			var notas=['C', 'C#', 'D', 'D#', 'E',
 			           'F', 'F#', 'G', 'G#',
@@ -41,7 +42,7 @@
 			    });
 			</script>
 	</head>
-	<body>
+	<body class="index">
 		<div id="logo" style="background-image: url(logo.png);"> </div>
 		
 		<form action="#" id="all" class="lead">
